// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`parser should parse compare instruction 1`] = `
Array [
  Object {
    "end": 11,
    "instruction": Object {
      "end": 4,
      "loc": Object {
        "end": Object {
          "column": 3,
          "line": 2,
        },
        "start": Object {
          "column": 0,
          "line": 2,
        },
      },
      "mnemonic": "CMP",
      "opcode": 218,
      "start": 1,
    },
    "label": null,
    "loc": Object {
      "end": Object {
        "column": 10,
        "line": 2,
      },
      "start": Object {
        "column": 0,
        "line": 2,
      },
    },
    "machineCodes": Array [218, 0, 1],
    "operands": Array [
      Object {
        "end": 7,
        "loc": Object {
          "end": Object {
            "column": 6,
            "line": 2,
          },
          "start": Object {
            "column": 4,
            "line": 2,
          },
        },
        "raw": "al",
        "rawValue": "AL",
        "start": 5,
        "type": "Register",
        "value": 0,
      },
      Object {
        "end": 11,
        "loc": Object {
          "end": Object {
            "column": 10,
            "line": 2,
          },
          "start": Object {
            "column": 8,
            "line": 2,
          },
        },
        "raw": "bl",
        "rawValue": "BL",
        "start": 9,
        "type": "Register",
        "value": 1,
      },
    ],
    "start": 1,
  },
  Object {
    "end": 22,
    "instruction": Object {
      "end": 15,
      "loc": Object {
        "end": Object {
          "column": 3,
          "line": 3,
        },
        "start": Object {
          "column": 0,
          "line": 3,
        },
      },
      "mnemonic": "CMP",
      "opcode": 219,
      "start": 12,
    },
    "label": null,
    "loc": Object {
      "end": Object {
        "column": 10,
        "line": 3,
      },
      "start": Object {
        "column": 0,
        "line": 3,
      },
    },
    "machineCodes": Array [219, 2, 1],
    "operands": Array [
      Object {
        "end": 18,
        "loc": Object {
          "end": Object {
            "column": 6,
            "line": 3,
          },
          "start": Object {
            "column": 4,
            "line": 3,
          },
        },
        "raw": "cl",
        "rawValue": "CL",
        "start": 16,
        "type": "Register",
        "value": 2,
      },
      Object {
        "end": 22,
        "loc": Object {
          "end": Object {
            "column": 10,
            "line": 3,
          },
          "start": Object {
            "column": 8,
            "line": 3,
          },
        },
        "raw": "01",
        "rawValue": "01",
        "start": 20,
        "type": "Number",
        "value": 1,
      },
    ],
    "start": 12,
  },
  Object {
    "end": 35,
    "instruction": Object {
      "end": 26,
      "loc": Object {
        "end": Object {
          "column": 3,
          "line": 4,
        },
        "start": Object {
          "column": 0,
          "line": 4,
        },
      },
      "mnemonic": "CMP",
      "opcode": 220,
      "start": 23,
    },
    "label": null,
    "loc": Object {
      "end": Object {
        "column": 12,
        "line": 4,
      },
      "start": Object {
        "column": 0,
        "line": 4,
      },
    },
    "machineCodes": Array [220, 3, 2],
    "operands": Array [
      Object {
        "end": 29,
        "loc": Object {
          "end": Object {
            "column": 6,
            "line": 4,
          },
          "start": Object {
            "column": 4,
            "line": 4,
          },
        },
        "raw": "dl",
        "rawValue": "DL",
        "start": 27,
        "type": "Register",
        "value": 3,
      },
      Object {
        "end": 35,
        "loc": Object {
          "end": Object {
            "column": 12,
            "line": 4,
          },
          "start": Object {
            "column": 8,
            "line": 4,
          },
        },
        "raw": "[02]",
        "rawValue": "02",
        "start": 31,
        "type": "Address",
        "value": 2,
      },
    ],
    "start": 23,
  },
  Object {
    "end": 39,
    "instruction": Object {
      "end": 39,
      "loc": Object {
        "end": Object {
          "column": 3,
          "line": 5,
        },
        "start": Object {
          "column": 0,
          "line": 5,
        },
      },
      "mnemonic": "END",
      "opcode": 0,
      "start": 36,
    },
    "label": null,
    "loc": Object {
      "end": Object {
        "column": 3,
        "line": 5,
      },
      "start": Object {
        "column": 0,
        "line": 5,
      },
    },
    "machineCodes": Array [0],
    "operands": Array [],
    "start": 36,
  },
]
`;

exports[`parser should parse direct arithmetic instruction 1`] = `
Array [
  Object {
    "end": 11,
    "instruction": Object {
      "end": 4,
      "loc": Object {
        "end": Object {
          "column": 3,
          "line": 2,
        },
        "start": Object {
          "column": 0,
          "line": 2,
        },
      },
      "mnemonic": "ADD",
      "opcode": 160,
      "start": 1,
    },
    "label": null,
    "loc": Object {
      "end": Object {
        "column": 10,
        "line": 2,
      },
      "start": Object {
        "column": 0,
        "line": 2,
      },
    },
    "machineCodes": Array [160, 0, 1],
    "operands": Array [
      Object {
        "end": 7,
        "loc": Object {
          "end": Object {
            "column": 6,
            "line": 2,
          },
          "start": Object {
            "column": 4,
            "line": 2,
          },
        },
        "raw": "al",
        "rawValue": "AL",
        "start": 5,
        "type": "Register",
        "value": 0,
      },
      Object {
        "end": 11,
        "loc": Object {
          "end": Object {
            "column": 10,
            "line": 2,
          },
          "start": Object {
            "column": 8,
            "line": 2,
          },
        },
        "raw": "bl",
        "rawValue": "BL",
        "start": 9,
        "type": "Register",
        "value": 1,
      },
    ],
    "start": 1,
  },
  Object {
    "end": 22,
    "instruction": Object {
      "end": 15,
      "loc": Object {
        "end": Object {
          "column": 3,
          "line": 3,
        },
        "start": Object {
          "column": 0,
          "line": 3,
        },
      },
      "mnemonic": "SUB",
      "opcode": 161,
      "start": 12,
    },
    "label": null,
    "loc": Object {
      "end": Object {
        "column": 10,
        "line": 3,
      },
      "start": Object {
        "column": 0,
        "line": 3,
      },
    },
    "machineCodes": Array [161, 2, 3],
    "operands": Array [
      Object {
        "end": 18,
        "loc": Object {
          "end": Object {
            "column": 6,
            "line": 3,
          },
          "start": Object {
            "column": 4,
            "line": 3,
          },
        },
        "raw": "cl",
        "rawValue": "CL",
        "start": 16,
        "type": "Register",
        "value": 2,
      },
      Object {
        "end": 22,
        "loc": Object {
          "end": Object {
            "column": 10,
            "line": 3,
          },
          "start": Object {
            "column": 8,
            "line": 3,
          },
        },
        "raw": "dl",
        "rawValue": "DL",
        "start": 20,
        "type": "Register",
        "value": 3,
      },
    ],
    "start": 12,
  },
  Object {
    "end": 33,
    "instruction": Object {
      "end": 26,
      "loc": Object {
        "end": Object {
          "column": 3,
          "line": 4,
        },
        "start": Object {
          "column": 0,
          "line": 4,
        },
      },
      "mnemonic": "MUL",
      "opcode": 162,
      "start": 23,
    },
    "label": null,
    "loc": Object {
      "end": Object {
        "column": 10,
        "line": 4,
      },
      "start": Object {
        "column": 0,
        "line": 4,
      },
    },
    "machineCodes": Array [162, 0, 1],
    "operands": Array [
      Object {
        "end": 29,
        "loc": Object {
          "end": Object {
            "column": 6,
            "line": 4,
          },
          "start": Object {
            "column": 4,
            "line": 4,
          },
        },
        "raw": "al",
        "rawValue": "AL",
        "start": 27,
        "type": "Register",
        "value": 0,
      },
      Object {
        "end": 33,
        "loc": Object {
          "end": Object {
            "column": 10,
            "line": 4,
          },
          "start": Object {
            "column": 8,
            "line": 4,
          },
        },
        "raw": "bl",
        "rawValue": "BL",
        "start": 31,
        "type": "Register",
        "value": 1,
      },
    ],
    "start": 23,
  },
  Object {
    "end": 44,
    "instruction": Object {
      "end": 37,
      "loc": Object {
        "end": Object {
          "column": 3,
          "line": 5,
        },
        "start": Object {
          "column": 0,
          "line": 5,
        },
      },
      "mnemonic": "DIV",
      "opcode": 163,
      "start": 34,
    },
    "label": null,
    "loc": Object {
      "end": Object {
        "column": 10,
        "line": 5,
      },
      "start": Object {
        "column": 0,
        "line": 5,
      },
    },
    "machineCodes": Array [163, 2, 3],
    "operands": Array [
      Object {
        "end": 40,
        "loc": Object {
          "end": Object {
            "column": 6,
            "line": 5,
          },
          "start": Object {
            "column": 4,
            "line": 5,
          },
        },
        "raw": "cl",
        "rawValue": "CL",
        "start": 38,
        "type": "Register",
        "value": 2,
      },
      Object {
        "end": 44,
        "loc": Object {
          "end": Object {
            "column": 10,
            "line": 5,
          },
          "start": Object {
            "column": 8,
            "line": 5,
          },
        },
        "raw": "dl",
        "rawValue": "DL",
        "start": 42,
        "type": "Register",
        "value": 3,
      },
    ],
    "start": 34,
  },
  Object {
    "end": 55,
    "instruction": Object {
      "end": 48,
      "loc": Object {
        "end": Object {
          "column": 3,
          "line": 6,
        },
        "start": Object {
          "column": 0,
          "line": 6,
        },
      },
      "mnemonic": "MOD",
      "opcode": 166,
      "start": 45,
    },
    "label": null,
    "loc": Object {
      "end": Object {
        "column": 10,
        "line": 6,
      },
      "start": Object {
        "column": 0,
        "line": 6,
      },
    },
    "machineCodes": Array [166, 0, 1],
    "operands": Array [
      Object {
        "end": 51,
        "loc": Object {
          "end": Object {
            "column": 6,
            "line": 6,
          },
          "start": Object {
            "column": 4,
            "line": 6,
          },
        },
        "raw": "al",
        "rawValue": "AL",
        "start": 49,
        "type": "Register",
        "value": 0,
      },
      Object {
        "end": 55,
        "loc": Object {
          "end": Object {
            "column": 10,
            "line": 6,
          },
          "start": Object {
            "column": 8,
            "line": 6,
          },
        },
        "raw": "bl",
        "rawValue": "BL",
        "start": 53,
        "type": "Register",
        "value": 1,
      },
    ],
    "start": 45,
  },
  Object {
    "end": 66,
    "instruction": Object {
      "end": 59,
      "loc": Object {
        "end": Object {
          "column": 3,
          "line": 7,
        },
        "start": Object {
          "column": 0,
          "line": 7,
        },
      },
      "mnemonic": "AND",
      "opcode": 170,
      "start": 56,
    },
    "label": null,
    "loc": Object {
      "end": Object {
        "column": 10,
        "line": 7,
      },
      "start": Object {
        "column": 0,
        "line": 7,
      },
    },
    "machineCodes": Array [170, 2, 3],
    "operands": Array [
      Object {
        "end": 62,
        "loc": Object {
          "end": Object {
            "column": 6,
            "line": 7,
          },
          "start": Object {
            "column": 4,
            "line": 7,
          },
        },
        "raw": "cl",
        "rawValue": "CL",
        "start": 60,
        "type": "Register",
        "value": 2,
      },
      Object {
        "end": 66,
        "loc": Object {
          "end": Object {
            "column": 10,
            "line": 7,
          },
          "start": Object {
            "column": 8,
            "line": 7,
          },
        },
        "raw": "dl",
        "rawValue": "DL",
        "start": 64,
        "type": "Register",
        "value": 3,
      },
    ],
    "start": 56,
  },
  Object {
    "end": 76,
    "instruction": Object {
      "end": 69,
      "loc": Object {
        "end": Object {
          "column": 2,
          "line": 8,
        },
        "start": Object {
          "column": 0,
          "line": 8,
        },
      },
      "mnemonic": "OR",
      "opcode": 171,
      "start": 67,
    },
    "label": null,
    "loc": Object {
      "end": Object {
        "column": 9,
        "line": 8,
      },
      "start": Object {
        "column": 0,
        "line": 8,
      },
    },
    "machineCodes": Array [171, 0, 1],
    "operands": Array [
      Object {
        "end": 72,
        "loc": Object {
          "end": Object {
            "column": 5,
            "line": 8,
          },
          "start": Object {
            "column": 3,
            "line": 8,
          },
        },
        "raw": "al",
        "rawValue": "AL",
        "start": 70,
        "type": "Register",
        "value": 0,
      },
      Object {
        "end": 76,
        "loc": Object {
          "end": Object {
            "column": 9,
            "line": 8,
          },
          "start": Object {
            "column": 7,
            "line": 8,
          },
        },
        "raw": "bl",
        "rawValue": "BL",
        "start": 74,
        "type": "Register",
        "value": 1,
      },
    ],
    "start": 67,
  },
  Object {
    "end": 87,
    "instruction": Object {
      "end": 80,
      "loc": Object {
        "end": Object {
          "column": 3,
          "line": 9,
        },
        "start": Object {
          "column": 0,
          "line": 9,
        },
      },
      "mnemonic": "XOR",
      "opcode": 172,
      "start": 77,
    },
    "label": null,
    "loc": Object {
      "end": Object {
        "column": 10,
        "line": 9,
      },
      "start": Object {
        "column": 0,
        "line": 9,
      },
    },
    "machineCodes": Array [172, 2, 3],
    "operands": Array [
      Object {
        "end": 83,
        "loc": Object {
          "end": Object {
            "column": 6,
            "line": 9,
          },
          "start": Object {
            "column": 4,
            "line": 9,
          },
        },
        "raw": "cl",
        "rawValue": "CL",
        "start": 81,
        "type": "Register",
        "value": 2,
      },
      Object {
        "end": 87,
        "loc": Object {
          "end": Object {
            "column": 10,
            "line": 9,
          },
          "start": Object {
            "column": 8,
            "line": 9,
          },
        },
        "raw": "dl",
        "rawValue": "DL",
        "start": 85,
        "type": "Register",
        "value": 3,
      },
    ],
    "start": 77,
  },
  Object {
    "end": 91,
    "instruction": Object {
      "end": 91,
      "loc": Object {
        "end": Object {
          "column": 3,
          "line": 10,
        },
        "start": Object {
          "column": 0,
          "line": 10,
        },
      },
      "mnemonic": "END",
      "opcode": 0,
      "start": 88,
    },
    "label": null,
    "loc": Object {
      "end": Object {
        "column": 3,
        "line": 10,
      },
      "start": Object {
        "column": 0,
        "line": 10,
      },
    },
    "machineCodes": Array [0],
    "operands": Array [],
    "start": 88,
  },
]
`;

exports[`parser should parse immediate arithmetic instruction 1`] = `
Array [
  Object {
    "end": 11,
    "instruction": Object {
      "end": 4,
      "loc": Object {
        "end": Object {
          "column": 3,
          "line": 2,
        },
        "start": Object {
          "column": 0,
          "line": 2,
        },
      },
      "mnemonic": "ADD",
      "opcode": 176,
      "start": 1,
    },
    "label": null,
    "loc": Object {
      "end": Object {
        "column": 10,
        "line": 2,
      },
      "start": Object {
        "column": 0,
        "line": 2,
      },
    },
    "machineCodes": Array [176, 0, 1],
    "operands": Array [
      Object {
        "end": 7,
        "loc": Object {
          "end": Object {
            "column": 6,
            "line": 2,
          },
          "start": Object {
            "column": 4,
            "line": 2,
          },
        },
        "raw": "al",
        "rawValue": "AL",
        "start": 5,
        "type": "Register",
        "value": 0,
      },
      Object {
        "end": 11,
        "loc": Object {
          "end": Object {
            "column": 10,
            "line": 2,
          },
          "start": Object {
            "column": 8,
            "line": 2,
          },
        },
        "raw": "01",
        "rawValue": "01",
        "start": 9,
        "type": "Number",
        "value": 1,
      },
    ],
    "start": 1,
  },
  Object {
    "end": 22,
    "instruction": Object {
      "end": 15,
      "loc": Object {
        "end": Object {
          "column": 3,
          "line": 3,
        },
        "start": Object {
          "column": 0,
          "line": 3,
        },
      },
      "mnemonic": "SUB",
      "opcode": 177,
      "start": 12,
    },
    "label": null,
    "loc": Object {
      "end": Object {
        "column": 10,
        "line": 3,
      },
      "start": Object {
        "column": 0,
        "line": 3,
      },
    },
    "machineCodes": Array [177, 1, 2],
    "operands": Array [
      Object {
        "end": 18,
        "loc": Object {
          "end": Object {
            "column": 6,
            "line": 3,
          },
          "start": Object {
            "column": 4,
            "line": 3,
          },
        },
        "raw": "bl",
        "rawValue": "BL",
        "start": 16,
        "type": "Register",
        "value": 1,
      },
      Object {
        "end": 22,
        "loc": Object {
          "end": Object {
            "column": 10,
            "line": 3,
          },
          "start": Object {
            "column": 8,
            "line": 3,
          },
        },
        "raw": "02",
        "rawValue": "02",
        "start": 20,
        "type": "Number",
        "value": 2,
      },
    ],
    "start": 12,
  },
  Object {
    "end": 33,
    "instruction": Object {
      "end": 26,
      "loc": Object {
        "end": Object {
          "column": 3,
          "line": 4,
        },
        "start": Object {
          "column": 0,
          "line": 4,
        },
      },
      "mnemonic": "MUL",
      "opcode": 178,
      "start": 23,
    },
    "label": null,
    "loc": Object {
      "end": Object {
        "column": 10,
        "line": 4,
      },
      "start": Object {
        "column": 0,
        "line": 4,
      },
    },
    "machineCodes": Array [178, 2, 3],
    "operands": Array [
      Object {
        "end": 29,
        "loc": Object {
          "end": Object {
            "column": 6,
            "line": 4,
          },
          "start": Object {
            "column": 4,
            "line": 4,
          },
        },
        "raw": "cl",
        "rawValue": "CL",
        "start": 27,
        "type": "Register",
        "value": 2,
      },
      Object {
        "end": 33,
        "loc": Object {
          "end": Object {
            "column": 10,
            "line": 4,
          },
          "start": Object {
            "column": 8,
            "line": 4,
          },
        },
        "raw": "03",
        "rawValue": "03",
        "start": 31,
        "type": "Number",
        "value": 3,
      },
    ],
    "start": 23,
  },
  Object {
    "end": 44,
    "instruction": Object {
      "end": 37,
      "loc": Object {
        "end": Object {
          "column": 3,
          "line": 5,
        },
        "start": Object {
          "column": 0,
          "line": 5,
        },
      },
      "mnemonic": "DIV",
      "opcode": 179,
      "start": 34,
    },
    "label": null,
    "loc": Object {
      "end": Object {
        "column": 10,
        "line": 5,
      },
      "start": Object {
        "column": 0,
        "line": 5,
      },
    },
    "machineCodes": Array [179, 3, 4],
    "operands": Array [
      Object {
        "end": 40,
        "loc": Object {
          "end": Object {
            "column": 6,
            "line": 5,
          },
          "start": Object {
            "column": 4,
            "line": 5,
          },
        },
        "raw": "dl",
        "rawValue": "DL",
        "start": 38,
        "type": "Register",
        "value": 3,
      },
      Object {
        "end": 44,
        "loc": Object {
          "end": Object {
            "column": 10,
            "line": 5,
          },
          "start": Object {
            "column": 8,
            "line": 5,
          },
        },
        "raw": "04",
        "rawValue": "04",
        "start": 42,
        "type": "Number",
        "value": 4,
      },
    ],
    "start": 34,
  },
  Object {
    "end": 55,
    "instruction": Object {
      "end": 48,
      "loc": Object {
        "end": Object {
          "column": 3,
          "line": 6,
        },
        "start": Object {
          "column": 0,
          "line": 6,
        },
      },
      "mnemonic": "MOD",
      "opcode": 182,
      "start": 45,
    },
    "label": null,
    "loc": Object {
      "end": Object {
        "column": 10,
        "line": 6,
      },
      "start": Object {
        "column": 0,
        "line": 6,
      },
    },
    "machineCodes": Array [182, 0, 1],
    "operands": Array [
      Object {
        "end": 51,
        "loc": Object {
          "end": Object {
            "column": 6,
            "line": 6,
          },
          "start": Object {
            "column": 4,
            "line": 6,
          },
        },
        "raw": "al",
        "rawValue": "AL",
        "start": 49,
        "type": "Register",
        "value": 0,
      },
      Object {
        "end": 55,
        "loc": Object {
          "end": Object {
            "column": 10,
            "line": 6,
          },
          "start": Object {
            "column": 8,
            "line": 6,
          },
        },
        "raw": "01",
        "rawValue": "01",
        "start": 53,
        "type": "Number",
        "value": 1,
      },
    ],
    "start": 45,
  },
  Object {
    "end": 66,
    "instruction": Object {
      "end": 59,
      "loc": Object {
        "end": Object {
          "column": 3,
          "line": 7,
        },
        "start": Object {
          "column": 0,
          "line": 7,
        },
      },
      "mnemonic": "AND",
      "opcode": 186,
      "start": 56,
    },
    "label": null,
    "loc": Object {
      "end": Object {
        "column": 10,
        "line": 7,
      },
      "start": Object {
        "column": 0,
        "line": 7,
      },
    },
    "machineCodes": Array [186, 1, 2],
    "operands": Array [
      Object {
        "end": 62,
        "loc": Object {
          "end": Object {
            "column": 6,
            "line": 7,
          },
          "start": Object {
            "column": 4,
            "line": 7,
          },
        },
        "raw": "bl",
        "rawValue": "BL",
        "start": 60,
        "type": "Register",
        "value": 1,
      },
      Object {
        "end": 66,
        "loc": Object {
          "end": Object {
            "column": 10,
            "line": 7,
          },
          "start": Object {
            "column": 8,
            "line": 7,
          },
        },
        "raw": "02",
        "rawValue": "02",
        "start": 64,
        "type": "Number",
        "value": 2,
      },
    ],
    "start": 56,
  },
  Object {
    "end": 76,
    "instruction": Object {
      "end": 69,
      "loc": Object {
        "end": Object {
          "column": 2,
          "line": 8,
        },
        "start": Object {
          "column": 0,
          "line": 8,
        },
      },
      "mnemonic": "OR",
      "opcode": 187,
      "start": 67,
    },
    "label": null,
    "loc": Object {
      "end": Object {
        "column": 9,
        "line": 8,
      },
      "start": Object {
        "column": 0,
        "line": 8,
      },
    },
    "machineCodes": Array [187, 2, 3],
    "operands": Array [
      Object {
        "end": 72,
        "loc": Object {
          "end": Object {
            "column": 5,
            "line": 8,
          },
          "start": Object {
            "column": 3,
            "line": 8,
          },
        },
        "raw": "cl",
        "rawValue": "CL",
        "start": 70,
        "type": "Register",
        "value": 2,
      },
      Object {
        "end": 76,
        "loc": Object {
          "end": Object {
            "column": 9,
            "line": 8,
          },
          "start": Object {
            "column": 7,
            "line": 8,
          },
        },
        "raw": "03",
        "rawValue": "03",
        "start": 74,
        "type": "Number",
        "value": 3,
      },
    ],
    "start": 67,
  },
  Object {
    "end": 87,
    "instruction": Object {
      "end": 80,
      "loc": Object {
        "end": Object {
          "column": 3,
          "line": 9,
        },
        "start": Object {
          "column": 0,
          "line": 9,
        },
      },
      "mnemonic": "XOR",
      "opcode": 188,
      "start": 77,
    },
    "label": null,
    "loc": Object {
      "end": Object {
        "column": 10,
        "line": 9,
      },
      "start": Object {
        "column": 0,
        "line": 9,
      },
    },
    "machineCodes": Array [188, 3, 4],
    "operands": Array [
      Object {
        "end": 83,
        "loc": Object {
          "end": Object {
            "column": 6,
            "line": 9,
          },
          "start": Object {
            "column": 4,
            "line": 9,
          },
        },
        "raw": "dl",
        "rawValue": "DL",
        "start": 81,
        "type": "Register",
        "value": 3,
      },
      Object {
        "end": 87,
        "loc": Object {
          "end": Object {
            "column": 10,
            "line": 9,
          },
          "start": Object {
            "column": 8,
            "line": 9,
          },
        },
        "raw": "04",
        "rawValue": "04",
        "start": 85,
        "type": "Number",
        "value": 4,
      },
    ],
    "start": 77,
  },
  Object {
    "end": 91,
    "instruction": Object {
      "end": 91,
      "loc": Object {
        "end": Object {
          "column": 3,
          "line": 10,
        },
        "start": Object {
          "column": 0,
          "line": 10,
        },
      },
      "mnemonic": "END",
      "opcode": 0,
      "start": 88,
    },
    "label": null,
    "loc": Object {
      "end": Object {
        "column": 3,
        "line": 10,
      },
      "start": Object {
        "column": 0,
        "line": 10,
      },
    },
    "machineCodes": Array [0],
    "operands": Array [],
    "start": 88,
  },
]
`;

exports[`parser should parse instruction with 1 operand 1`] = `
Array [
  Object {
    "end": 14,
    "instruction": Object {
      "end": 11,
      "loc": Object {
        "end": Object {
          "column": 3,
          "line": 3,
        },
        "start": Object {
          "column": 0,
          "line": 3,
        },
      },
      "mnemonic": "INC",
      "opcode": 164,
      "start": 8,
    },
    "label": Object {
      "end": 7,
      "identifier": "START",
      "loc": Object {
        "end": Object {
          "column": 6,
          "line": 2,
        },
        "start": Object {
          "column": 0,
          "line": 2,
        },
      },
      "start": 1,
    },
    "loc": Object {
      "end": Object {
        "column": 6,
        "line": 3,
      },
      "start": Object {
        "column": 0,
        "line": 3,
      },
    },
    "machineCodes": Array [164, 0],
    "operands": Array [
      Object {
        "end": 14,
        "loc": Object {
          "end": Object {
            "column": 6,
            "line": 3,
          },
          "start": Object {
            "column": 4,
            "line": 3,
          },
        },
        "raw": "al",
        "rawValue": "AL",
        "start": 12,
        "type": "Register",
        "value": 0,
      },
    ],
    "start": 8,
  },
  Object {
    "end": 21,
    "instruction": Object {
      "end": 18,
      "loc": Object {
        "end": Object {
          "column": 3,
          "line": 4,
        },
        "start": Object {
          "column": 0,
          "line": 4,
        },
      },
      "mnemonic": "DEC",
      "opcode": 165,
      "start": 15,
    },
    "label": null,
    "loc": Object {
      "end": Object {
        "column": 6,
        "line": 4,
      },
      "start": Object {
        "column": 0,
        "line": 4,
      },
    },
    "machineCodes": Array [165, 1],
    "operands": Array [
      Object {
        "end": 21,
        "loc": Object {
          "end": Object {
            "column": 6,
            "line": 4,
          },
          "start": Object {
            "column": 4,
            "line": 4,
          },
        },
        "raw": "bl",
        "rawValue": "BL",
        "start": 19,
        "type": "Register",
        "value": 1,
      },
    ],
    "start": 15,
  },
  Object {
    "end": 28,
    "instruction": Object {
      "end": 25,
      "loc": Object {
        "end": Object {
          "column": 3,
          "line": 5,
        },
        "start": Object {
          "column": 0,
          "line": 5,
        },
      },
      "mnemonic": "NOT",
      "opcode": 173,
      "start": 22,
    },
    "label": null,
    "loc": Object {
      "end": Object {
        "column": 6,
        "line": 5,
      },
      "start": Object {
        "column": 0,
        "line": 5,
      },
    },
    "machineCodes": Array [173, 2],
    "operands": Array [
      Object {
        "end": 28,
        "loc": Object {
          "end": Object {
            "column": 6,
            "line": 5,
          },
          "start": Object {
            "column": 4,
            "line": 5,
          },
        },
        "raw": "cl",
        "rawValue": "CL",
        "start": 26,
        "type": "Register",
        "value": 2,
      },
    ],
    "start": 22,
  },
  Object {
    "end": 35,
    "instruction": Object {
      "end": 32,
      "loc": Object {
        "end": Object {
          "column": 3,
          "line": 6,
        },
        "start": Object {
          "column": 0,
          "line": 6,
        },
      },
      "mnemonic": "ROL",
      "opcode": 154,
      "start": 29,
    },
    "label": null,
    "loc": Object {
      "end": Object {
        "column": 6,
        "line": 6,
      },
      "start": Object {
        "column": 0,
        "line": 6,
      },
    },
    "machineCodes": Array [154, 3],
    "operands": Array [
      Object {
        "end": 35,
        "loc": Object {
          "end": Object {
            "column": 6,
            "line": 6,
          },
          "start": Object {
            "column": 4,
            "line": 6,
          },
        },
        "raw": "dl",
        "rawValue": "DL",
        "start": 33,
        "type": "Register",
        "value": 3,
      },
    ],
    "start": 29,
  },
  Object {
    "end": 42,
    "instruction": Object {
      "end": 39,
      "loc": Object {
        "end": Object {
          "column": 3,
          "line": 7,
        },
        "start": Object {
          "column": 0,
          "line": 7,
        },
      },
      "mnemonic": "ROR",
      "opcode": 155,
      "start": 36,
    },
    "label": null,
    "loc": Object {
      "end": Object {
        "column": 6,
        "line": 7,
      },
      "start": Object {
        "column": 0,
        "line": 7,
      },
    },
    "machineCodes": Array [155, 0],
    "operands": Array [
      Object {
        "end": 42,
        "loc": Object {
          "end": Object {
            "column": 6,
            "line": 7,
          },
          "start": Object {
            "column": 4,
            "line": 7,
          },
        },
        "raw": "al",
        "rawValue": "AL",
        "start": 40,
        "type": "Register",
        "value": 0,
      },
    ],
    "start": 36,
  },
  Object {
    "end": 49,
    "instruction": Object {
      "end": 46,
      "loc": Object {
        "end": Object {
          "column": 3,
          "line": 8,
        },
        "start": Object {
          "column": 0,
          "line": 8,
        },
      },
      "mnemonic": "SHL",
      "opcode": 156,
      "start": 43,
    },
    "label": null,
    "loc": Object {
      "end": Object {
        "column": 6,
        "line": 8,
      },
      "start": Object {
        "column": 0,
        "line": 8,
      },
    },
    "machineCodes": Array [156, 1],
    "operands": Array [
      Object {
        "end": 49,
        "loc": Object {
          "end": Object {
            "column": 6,
            "line": 8,
          },
          "start": Object {
            "column": 4,
            "line": 8,
          },
        },
        "raw": "bl",
        "rawValue": "BL",
        "start": 47,
        "type": "Register",
        "value": 1,
      },
    ],
    "start": 43,
  },
  Object {
    "end": 56,
    "instruction": Object {
      "end": 53,
      "loc": Object {
        "end": Object {
          "column": 3,
          "line": 9,
        },
        "start": Object {
          "column": 0,
          "line": 9,
        },
      },
      "mnemonic": "SHR",
      "opcode": 157,
      "start": 50,
    },
    "label": null,
    "loc": Object {
      "end": Object {
        "column": 6,
        "line": 9,
      },
      "start": Object {
        "column": 0,
        "line": 9,
      },
    },
    "machineCodes": Array [157, 2],
    "operands": Array [
      Object {
        "end": 56,
        "loc": Object {
          "end": Object {
            "column": 6,
            "line": 9,
          },
          "start": Object {
            "column": 4,
            "line": 9,
          },
        },
        "raw": "cl",
        "rawValue": "CL",
        "start": 54,
        "type": "Register",
        "value": 2,
      },
    ],
    "start": 50,
  },
  Object {
    "end": 66,
    "instruction": Object {
      "end": 60,
      "loc": Object {
        "end": Object {
          "column": 3,
          "line": 10,
        },
        "start": Object {
          "column": 0,
          "line": 10,
        },
      },
      "mnemonic": "JMP",
      "opcode": 192,
      "start": 57,
    },
    "label": null,
    "loc": Object {
      "end": Object {
        "column": 9,
        "line": 10,
      },
      "start": Object {
        "column": 0,
        "line": 10,
      },
    },
    "machineCodes": Array [192],
    "operands": Array [
      Object {
        "end": 66,
        "loc": Object {
          "end": Object {
            "column": 9,
            "line": 10,
          },
          "start": Object {
            "column": 4,
            "line": 10,
          },
        },
        "raw": "start",
        "rawValue": "START",
        "start": 61,
        "type": "Label",
        "value": undefined,
      },
    ],
    "start": 57,
  },
  Object {
    "end": 75,
    "instruction": Object {
      "end": 69,
      "loc": Object {
        "end": Object {
          "column": 2,
          "line": 11,
        },
        "start": Object {
          "column": 0,
          "line": 11,
        },
      },
      "mnemonic": "JZ",
      "opcode": 193,
      "start": 67,
    },
    "label": null,
    "loc": Object {
      "end": Object {
        "column": 8,
        "line": 11,
      },
      "start": Object {
        "column": 0,
        "line": 11,
      },
    },
    "machineCodes": Array [193],
    "operands": Array [
      Object {
        "end": 75,
        "loc": Object {
          "end": Object {
            "column": 8,
            "line": 11,
          },
          "start": Object {
            "column": 3,
            "line": 11,
          },
        },
        "raw": "start",
        "rawValue": "START",
        "start": 70,
        "type": "Label",
        "value": undefined,
      },
    ],
    "start": 67,
  },
  Object {
    "end": 85,
    "instruction": Object {
      "end": 79,
      "loc": Object {
        "end": Object {
          "column": 3,
          "line": 12,
        },
        "start": Object {
          "column": 0,
          "line": 12,
        },
      },
      "mnemonic": "JNZ",
      "opcode": 194,
      "start": 76,
    },
    "label": null,
    "loc": Object {
      "end": Object {
        "column": 9,
        "line": 12,
      },
      "start": Object {
        "column": 0,
        "line": 12,
      },
    },
    "machineCodes": Array [194],
    "operands": Array [
      Object {
        "end": 85,
        "loc": Object {
          "end": Object {
            "column": 9,
            "line": 12,
          },
          "start": Object {
            "column": 4,
            "line": 12,
          },
        },
        "raw": "start",
        "rawValue": "START",
        "start": 80,
        "type": "Label",
        "value": undefined,
      },
    ],
    "start": 76,
  },
  Object {
    "end": 94,
    "instruction": Object {
      "end": 88,
      "loc": Object {
        "end": Object {
          "column": 2,
          "line": 13,
        },
        "start": Object {
          "column": 0,
          "line": 13,
        },
      },
      "mnemonic": "JS",
      "opcode": 195,
      "start": 86,
    },
    "label": null,
    "loc": Object {
      "end": Object {
        "column": 8,
        "line": 13,
      },
      "start": Object {
        "column": 0,
        "line": 13,
      },
    },
    "machineCodes": Array [195],
    "operands": Array [
      Object {
        "end": 94,
        "loc": Object {
          "end": Object {
            "column": 8,
            "line": 13,
          },
          "start": Object {
            "column": 3,
            "line": 13,
          },
        },
        "raw": "start",
        "rawValue": "START",
        "start": 89,
        "type": "Label",
        "value": undefined,
      },
    ],
    "start": 86,
  },
  Object {
    "end": 104,
    "instruction": Object {
      "end": 98,
      "loc": Object {
        "end": Object {
          "column": 3,
          "line": 14,
        },
        "start": Object {
          "column": 0,
          "line": 14,
        },
      },
      "mnemonic": "JNS",
      "opcode": 196,
      "start": 95,
    },
    "label": null,
    "loc": Object {
      "end": Object {
        "column": 9,
        "line": 14,
      },
      "start": Object {
        "column": 0,
        "line": 14,
      },
    },
    "machineCodes": Array [196],
    "operands": Array [
      Object {
        "end": 104,
        "loc": Object {
          "end": Object {
            "column": 9,
            "line": 14,
          },
          "start": Object {
            "column": 4,
            "line": 14,
          },
        },
        "raw": "start",
        "rawValue": "START",
        "start": 99,
        "type": "Label",
        "value": undefined,
      },
    ],
    "start": 95,
  },
  Object {
    "end": 113,
    "instruction": Object {
      "end": 107,
      "loc": Object {
        "end": Object {
          "column": 2,
          "line": 15,
        },
        "start": Object {
          "column": 0,
          "line": 15,
        },
      },
      "mnemonic": "JO",
      "opcode": 197,
      "start": 105,
    },
    "label": null,
    "loc": Object {
      "end": Object {
        "column": 8,
        "line": 15,
      },
      "start": Object {
        "column": 0,
        "line": 15,
      },
    },
    "machineCodes": Array [197],
    "operands": Array [
      Object {
        "end": 113,
        "loc": Object {
          "end": Object {
            "column": 8,
            "line": 15,
          },
          "start": Object {
            "column": 3,
            "line": 15,
          },
        },
        "raw": "start",
        "rawValue": "START",
        "start": 108,
        "type": "Label",
        "value": undefined,
      },
    ],
    "start": 105,
  },
  Object {
    "end": 123,
    "instruction": Object {
      "end": 117,
      "loc": Object {
        "end": Object {
          "column": 3,
          "line": 16,
        },
        "start": Object {
          "column": 0,
          "line": 16,
        },
      },
      "mnemonic": "JNO",
      "opcode": 198,
      "start": 114,
    },
    "label": null,
    "loc": Object {
      "end": Object {
        "column": 9,
        "line": 16,
      },
      "start": Object {
        "column": 0,
        "line": 16,
      },
    },
    "machineCodes": Array [198],
    "operands": Array [
      Object {
        "end": 123,
        "loc": Object {
          "end": Object {
            "column": 9,
            "line": 16,
          },
          "start": Object {
            "column": 4,
            "line": 16,
          },
        },
        "raw": "start",
        "rawValue": "START",
        "start": 118,
        "type": "Label",
        "value": undefined,
      },
    ],
    "start": 114,
  },
  Object {
    "end": 131,
    "instruction": Object {
      "end": 128,
      "loc": Object {
        "end": Object {
          "column": 4,
          "line": 17,
        },
        "start": Object {
          "column": 0,
          "line": 17,
        },
      },
      "mnemonic": "PUSH",
      "opcode": 224,
      "start": 124,
    },
    "label": null,
    "loc": Object {
      "end": Object {
        "column": 7,
        "line": 17,
      },
      "start": Object {
        "column": 0,
        "line": 17,
      },
    },
    "machineCodes": Array [224, 0],
    "operands": Array [
      Object {
        "end": 131,
        "loc": Object {
          "end": Object {
            "column": 7,
            "line": 17,
          },
          "start": Object {
            "column": 5,
            "line": 17,
          },
        },
        "raw": "al",
        "rawValue": "AL",
        "start": 129,
        "type": "Register",
        "value": 0,
      },
    ],
    "start": 124,
  },
  Object {
    "end": 138,
    "instruction": Object {
      "end": 135,
      "loc": Object {
        "end": Object {
          "column": 3,
          "line": 18,
        },
        "start": Object {
          "column": 0,
          "line": 18,
        },
      },
      "mnemonic": "POP",
      "opcode": 225,
      "start": 132,
    },
    "label": null,
    "loc": Object {
      "end": Object {
        "column": 6,
        "line": 18,
      },
      "start": Object {
        "column": 0,
        "line": 18,
      },
    },
    "machineCodes": Array [225, 1],
    "operands": Array [
      Object {
        "end": 138,
        "loc": Object {
          "end": Object {
            "column": 6,
            "line": 18,
          },
          "start": Object {
            "column": 4,
            "line": 18,
          },
        },
        "raw": "bl",
        "rawValue": "BL",
        "start": 136,
        "type": "Register",
        "value": 1,
      },
    ],
    "start": 132,
  },
  Object {
    "end": 145,
    "instruction": Object {
      "end": 143,
      "loc": Object {
        "end": Object {
          "column": 4,
          "line": 19,
        },
        "start": Object {
          "column": 0,
          "line": 19,
        },
      },
      "mnemonic": "CALL",
      "opcode": 202,
      "start": 139,
    },
    "label": null,
    "loc": Object {
      "end": Object {
        "column": 6,
        "line": 19,
      },
      "start": Object {
        "column": 0,
        "line": 19,
      },
    },
    "machineCodes": Array [202, 0],
    "operands": Array [
      Object {
        "end": 145,
        "loc": Object {
          "end": Object {
            "column": 6,
            "line": 19,
          },
          "start": Object {
            "column": 5,
            "line": 19,
          },
        },
        "raw": "0",
        "rawValue": "0",
        "start": 144,
        "type": "Number",
        "value": 0,
      },
    ],
    "start": 139,
  },
  Object {
    "end": 151,
    "instruction": Object {
      "end": 149,
      "loc": Object {
        "end": Object {
          "column": 3,
          "line": 20,
        },
        "start": Object {
          "column": 0,
          "line": 20,
        },
      },
      "mnemonic": "INT",
      "opcode": 204,
      "start": 146,
    },
    "label": null,
    "loc": Object {
      "end": Object {
        "column": 5,
        "line": 20,
      },
      "start": Object {
        "column": 0,
        "line": 20,
      },
    },
    "machineCodes": Array [204, 1],
    "operands": Array [
      Object {
        "end": 151,
        "loc": Object {
          "end": Object {
            "column": 5,
            "line": 20,
          },
          "start": Object {
            "column": 4,
            "line": 20,
          },
        },
        "raw": "1",
        "rawValue": "1",
        "start": 150,
        "type": "Number",
        "value": 1,
      },
    ],
    "start": 146,
  },
  Object {
    "end": 156,
    "instruction": Object {
      "end": 154,
      "loc": Object {
        "end": Object {
          "column": 2,
          "line": 21,
        },
        "start": Object {
          "column": 0,
          "line": 21,
        },
      },
      "mnemonic": "IN",
      "opcode": 240,
      "start": 152,
    },
    "label": null,
    "loc": Object {
      "end": Object {
        "column": 4,
        "line": 21,
      },
      "start": Object {
        "column": 0,
        "line": 21,
      },
    },
    "machineCodes": Array [240, 2],
    "operands": Array [
      Object {
        "end": 156,
        "loc": Object {
          "end": Object {
            "column": 4,
            "line": 21,
          },
          "start": Object {
            "column": 3,
            "line": 21,
          },
        },
        "raw": "2",
        "rawValue": "2",
        "start": 155,
        "type": "Number",
        "value": 2,
      },
    ],
    "start": 152,
  },
  Object {
    "end": 162,
    "instruction": Object {
      "end": 160,
      "loc": Object {
        "end": Object {
          "column": 3,
          "line": 22,
        },
        "start": Object {
          "column": 0,
          "line": 22,
        },
      },
      "mnemonic": "OUT",
      "opcode": 241,
      "start": 157,
    },
    "label": null,
    "loc": Object {
      "end": Object {
        "column": 5,
        "line": 22,
      },
      "start": Object {
        "column": 0,
        "line": 22,
      },
    },
    "machineCodes": Array [241, 3],
    "operands": Array [
      Object {
        "end": 162,
        "loc": Object {
          "end": Object {
            "column": 5,
            "line": 22,
          },
          "start": Object {
            "column": 4,
            "line": 22,
          },
        },
        "raw": "3",
        "rawValue": "3",
        "start": 161,
        "type": "Number",
        "value": 3,
      },
    ],
    "start": 157,
  },
  Object {
    "end": 168,
    "instruction": Object {
      "end": 166,
      "loc": Object {
        "end": Object {
          "column": 3,
          "line": 23,
        },
        "start": Object {
          "column": 0,
          "line": 23,
        },
      },
      "mnemonic": "ORG",
      "opcode": null,
      "start": 163,
    },
    "label": null,
    "loc": Object {
      "end": Object {
        "column": 5,
        "line": 23,
      },
      "start": Object {
        "column": 0,
        "line": 23,
      },
    },
    "machineCodes": Array [4],
    "operands": Array [
      Object {
        "end": 168,
        "loc": Object {
          "end": Object {
            "column": 5,
            "line": 23,
          },
          "start": Object {
            "column": 4,
            "line": 23,
          },
        },
        "raw": "4",
        "rawValue": "4",
        "start": 167,
        "type": "Number",
        "value": 4,
      },
    ],
    "start": 163,
  },
  Object {
    "end": 173,
    "instruction": Object {
      "end": 171,
      "loc": Object {
        "end": Object {
          "column": 2,
          "line": 24,
        },
        "start": Object {
          "column": 0,
          "line": 24,
        },
      },
      "mnemonic": "DB",
      "opcode": null,
      "start": 169,
    },
    "label": null,
    "loc": Object {
      "end": Object {
        "column": 4,
        "line": 24,
      },
      "start": Object {
        "column": 0,
        "line": 24,
      },
    },
    "machineCodes": Array [5],
    "operands": Array [
      Object {
        "end": 173,
        "loc": Object {
          "end": Object {
            "column": 4,
            "line": 24,
          },
          "start": Object {
            "column": 3,
            "line": 24,
          },
        },
        "raw": "5",
        "rawValue": "5",
        "start": 172,
        "type": "Number",
        "value": 5,
      },
    ],
    "start": 169,
  },
  Object {
    "end": 181,
    "instruction": Object {
      "end": 176,
      "loc": Object {
        "end": Object {
          "column": 2,
          "line": 25,
        },
        "start": Object {
          "column": 0,
          "line": 25,
        },
      },
      "mnemonic": "DB",
      "opcode": null,
      "start": 174,
    },
    "label": null,
    "loc": Object {
      "end": Object {
        "column": 7,
        "line": 25,
      },
      "start": Object {
        "column": 0,
        "line": 25,
      },
    },
    "machineCodes": Array [54, 55],
    "operands": Array [
      Object {
        "end": 181,
        "loc": Object {
          "end": Object {
            "column": 7,
            "line": 25,
          },
          "start": Object {
            "column": 3,
            "line": 25,
          },
        },
        "raw": "\\"67\\"",
        "rawValue": "67",
        "start": 177,
        "type": "String",
        "value": Array [54, 55],
      },
    ],
    "start": 174,
  },
  Object {
    "end": 185,
    "instruction": Object {
      "end": 185,
      "loc": Object {
        "end": Object {
          "column": 3,
          "line": 26,
        },
        "start": Object {
          "column": 0,
          "line": 26,
        },
      },
      "mnemonic": "END",
      "opcode": 0,
      "start": 182,
    },
    "label": null,
    "loc": Object {
      "end": Object {
        "column": 3,
        "line": 26,
      },
      "start": Object {
        "column": 0,
        "line": 26,
      },
    },
    "machineCodes": Array [0],
    "operands": Array [],
    "start": 182,
  },
]
`;

exports[`parser should parse instruction with no operand 1`] = `
Array [
  Object {
    "end": 6,
    "instruction": Object {
      "end": 6,
      "loc": Object {
        "end": Object {
          "column": 5,
          "line": 2,
        },
        "start": Object {
          "column": 0,
          "line": 2,
        },
      },
      "mnemonic": "PUSHF",
      "opcode": 234,
      "start": 1,
    },
    "label": null,
    "loc": Object {
      "end": Object {
        "column": 5,
        "line": 2,
      },
      "start": Object {
        "column": 0,
        "line": 2,
      },
    },
    "machineCodes": Array [234],
    "operands": Array [],
    "start": 1,
  },
  Object {
    "end": 11,
    "instruction": Object {
      "end": 11,
      "loc": Object {
        "end": Object {
          "column": 4,
          "line": 3,
        },
        "start": Object {
          "column": 0,
          "line": 3,
        },
      },
      "mnemonic": "POPF",
      "opcode": 235,
      "start": 7,
    },
    "label": null,
    "loc": Object {
      "end": Object {
        "column": 4,
        "line": 3,
      },
      "start": Object {
        "column": 0,
        "line": 3,
      },
    },
    "machineCodes": Array [235],
    "operands": Array [],
    "start": 7,
  },
  Object {
    "end": 15,
    "instruction": Object {
      "end": 15,
      "loc": Object {
        "end": Object {
          "column": 3,
          "line": 4,
        },
        "start": Object {
          "column": 0,
          "line": 4,
        },
      },
      "mnemonic": "RET",
      "opcode": 203,
      "start": 12,
    },
    "label": null,
    "loc": Object {
      "end": Object {
        "column": 3,
        "line": 4,
      },
      "start": Object {
        "column": 0,
        "line": 4,
      },
    },
    "machineCodes": Array [203],
    "operands": Array [],
    "start": 12,
  },
  Object {
    "end": 20,
    "instruction": Object {
      "end": 20,
      "loc": Object {
        "end": Object {
          "column": 4,
          "line": 5,
        },
        "start": Object {
          "column": 0,
          "line": 5,
        },
      },
      "mnemonic": "IRET",
      "opcode": 205,
      "start": 16,
    },
    "label": null,
    "loc": Object {
      "end": Object {
        "column": 4,
        "line": 5,
      },
      "start": Object {
        "column": 0,
        "line": 5,
      },
    },
    "machineCodes": Array [205],
    "operands": Array [],
    "start": 16,
  },
  Object {
    "end": 25,
    "instruction": Object {
      "end": 25,
      "loc": Object {
        "end": Object {
          "column": 4,
          "line": 6,
        },
        "start": Object {
          "column": 0,
          "line": 6,
        },
      },
      "mnemonic": "HALT",
      "opcode": 0,
      "start": 21,
    },
    "label": null,
    "loc": Object {
      "end": Object {
        "column": 4,
        "line": 6,
      },
      "start": Object {
        "column": 0,
        "line": 6,
      },
    },
    "machineCodes": Array [0],
    "operands": Array [],
    "start": 21,
  },
  Object {
    "end": 29,
    "instruction": Object {
      "end": 29,
      "loc": Object {
        "end": Object {
          "column": 3,
          "line": 7,
        },
        "start": Object {
          "column": 0,
          "line": 7,
        },
      },
      "mnemonic": "NOP",
      "opcode": 255,
      "start": 26,
    },
    "label": null,
    "loc": Object {
      "end": Object {
        "column": 3,
        "line": 7,
      },
      "start": Object {
        "column": 0,
        "line": 7,
      },
    },
    "machineCodes": Array [255],
    "operands": Array [],
    "start": 26,
  },
  Object {
    "end": 33,
    "instruction": Object {
      "end": 33,
      "loc": Object {
        "end": Object {
          "column": 3,
          "line": 8,
        },
        "start": Object {
          "column": 0,
          "line": 8,
        },
      },
      "mnemonic": "CLO",
      "opcode": 254,
      "start": 30,
    },
    "label": null,
    "loc": Object {
      "end": Object {
        "column": 3,
        "line": 8,
      },
      "start": Object {
        "column": 0,
        "line": 8,
      },
    },
    "machineCodes": Array [254],
    "operands": Array [],
    "start": 30,
  },
  Object {
    "end": 37,
    "instruction": Object {
      "end": 37,
      "loc": Object {
        "end": Object {
          "column": 3,
          "line": 9,
        },
        "start": Object {
          "column": 0,
          "line": 9,
        },
      },
      "mnemonic": "CLI",
      "opcode": 253,
      "start": 34,
    },
    "label": null,
    "loc": Object {
      "end": Object {
        "column": 3,
        "line": 9,
      },
      "start": Object {
        "column": 0,
        "line": 9,
      },
    },
    "machineCodes": Array [253],
    "operands": Array [],
    "start": 34,
  },
  Object {
    "end": 41,
    "instruction": Object {
      "end": 41,
      "loc": Object {
        "end": Object {
          "column": 3,
          "line": 10,
        },
        "start": Object {
          "column": 0,
          "line": 10,
        },
      },
      "mnemonic": "STI",
      "opcode": 252,
      "start": 38,
    },
    "label": null,
    "loc": Object {
      "end": Object {
        "column": 3,
        "line": 10,
      },
      "start": Object {
        "column": 0,
        "line": 10,
      },
    },
    "machineCodes": Array [252],
    "operands": Array [],
    "start": 38,
  },
  Object {
    "end": 45,
    "instruction": Object {
      "end": 45,
      "loc": Object {
        "end": Object {
          "column": 3,
          "line": 11,
        },
        "start": Object {
          "column": 0,
          "line": 11,
        },
      },
      "mnemonic": "END",
      "opcode": 0,
      "start": 42,
    },
    "label": null,
    "loc": Object {
      "end": Object {
        "column": 3,
        "line": 11,
      },
      "start": Object {
        "column": 0,
        "line": 11,
      },
    },
    "machineCodes": Array [0],
    "operands": Array [],
    "start": 42,
  },
]
`;

exports[`parser should parse move instruction 1`] = `
Array [
  Object {
    "end": 11,
    "instruction": Object {
      "end": 4,
      "loc": Object {
        "end": Object {
          "column": 3,
          "line": 2,
        },
        "start": Object {
          "column": 0,
          "line": 2,
        },
      },
      "mnemonic": "MOV",
      "opcode": 208,
      "start": 1,
    },
    "label": null,
    "loc": Object {
      "end": Object {
        "column": 10,
        "line": 2,
      },
      "start": Object {
        "column": 0,
        "line": 2,
      },
    },
    "machineCodes": Array [208, 0, 1],
    "operands": Array [
      Object {
        "end": 7,
        "loc": Object {
          "end": Object {
            "column": 6,
            "line": 2,
          },
          "start": Object {
            "column": 4,
            "line": 2,
          },
        },
        "raw": "al",
        "rawValue": "AL",
        "start": 5,
        "type": "Register",
        "value": 0,
      },
      Object {
        "end": 11,
        "loc": Object {
          "end": Object {
            "column": 10,
            "line": 2,
          },
          "start": Object {
            "column": 8,
            "line": 2,
          },
        },
        "raw": "01",
        "rawValue": "01",
        "start": 9,
        "type": "Number",
        "value": 1,
      },
    ],
    "start": 1,
  },
  Object {
    "end": 24,
    "instruction": Object {
      "end": 15,
      "loc": Object {
        "end": Object {
          "column": 3,
          "line": 3,
        },
        "start": Object {
          "column": 0,
          "line": 3,
        },
      },
      "mnemonic": "MOV",
      "opcode": 209,
      "start": 12,
    },
    "label": null,
    "loc": Object {
      "end": Object {
        "column": 12,
        "line": 3,
      },
      "start": Object {
        "column": 0,
        "line": 3,
      },
    },
    "machineCodes": Array [209, 1, 2],
    "operands": Array [
      Object {
        "end": 18,
        "loc": Object {
          "end": Object {
            "column": 6,
            "line": 3,
          },
          "start": Object {
            "column": 4,
            "line": 3,
          },
        },
        "raw": "bl",
        "rawValue": "BL",
        "start": 16,
        "type": "Register",
        "value": 1,
      },
      Object {
        "end": 24,
        "loc": Object {
          "end": Object {
            "column": 12,
            "line": 3,
          },
          "start": Object {
            "column": 8,
            "line": 3,
          },
        },
        "raw": "[02]",
        "rawValue": "02",
        "start": 20,
        "type": "Address",
        "value": 2,
      },
    ],
    "start": 12,
  },
  Object {
    "end": 37,
    "instruction": Object {
      "end": 28,
      "loc": Object {
        "end": Object {
          "column": 3,
          "line": 4,
        },
        "start": Object {
          "column": 0,
          "line": 4,
        },
      },
      "mnemonic": "MOV",
      "opcode": 210,
      "start": 25,
    },
    "label": null,
    "loc": Object {
      "end": Object {
        "column": 12,
        "line": 4,
      },
      "start": Object {
        "column": 0,
        "line": 4,
      },
    },
    "machineCodes": Array [210, 3, 2],
    "operands": Array [
      Object {
        "end": 33,
        "loc": Object {
          "end": Object {
            "column": 8,
            "line": 4,
          },
          "start": Object {
            "column": 4,
            "line": 4,
          },
        },
        "raw": "[03]",
        "rawValue": "03",
        "start": 29,
        "type": "Address",
        "value": 3,
      },
      Object {
        "end": 37,
        "loc": Object {
          "end": Object {
            "column": 12,
            "line": 4,
          },
          "start": Object {
            "column": 10,
            "line": 4,
          },
        },
        "raw": "cl",
        "rawValue": "CL",
        "start": 35,
        "type": "Register",
        "value": 2,
      },
    ],
    "start": 25,
  },
  Object {
    "end": 50,
    "instruction": Object {
      "end": 41,
      "loc": Object {
        "end": Object {
          "column": 3,
          "line": 5,
        },
        "start": Object {
          "column": 0,
          "line": 5,
        },
      },
      "mnemonic": "MOV",
      "opcode": 211,
      "start": 38,
    },
    "label": null,
    "loc": Object {
      "end": Object {
        "column": 12,
        "line": 5,
      },
      "start": Object {
        "column": 0,
        "line": 5,
      },
    },
    "machineCodes": Array [211, 3, 0],
    "operands": Array [
      Object {
        "end": 44,
        "loc": Object {
          "end": Object {
            "column": 6,
            "line": 5,
          },
          "start": Object {
            "column": 4,
            "line": 5,
          },
        },
        "raw": "dl",
        "rawValue": "DL",
        "start": 42,
        "type": "Register",
        "value": 3,
      },
      Object {
        "end": 50,
        "loc": Object {
          "end": Object {
            "column": 12,
            "line": 5,
          },
          "start": Object {
            "column": 8,
            "line": 5,
          },
        },
        "raw": "[al]",
        "rawValue": "AL",
        "start": 46,
        "type": "RegisterAddress",
        "value": 0,
      },
    ],
    "start": 38,
  },
  Object {
    "end": 63,
    "instruction": Object {
      "end": 54,
      "loc": Object {
        "end": Object {
          "column": 3,
          "line": 6,
        },
        "start": Object {
          "column": 0,
          "line": 6,
        },
      },
      "mnemonic": "MOV",
      "opcode": 212,
      "start": 51,
    },
    "label": null,
    "loc": Object {
      "end": Object {
        "column": 12,
        "line": 6,
      },
      "start": Object {
        "column": 0,
        "line": 6,
      },
    },
    "machineCodes": Array [212, 1, 2],
    "operands": Array [
      Object {
        "end": 59,
        "loc": Object {
          "end": Object {
            "column": 8,
            "line": 6,
          },
          "start": Object {
            "column": 4,
            "line": 6,
          },
        },
        "raw": "[bl]",
        "rawValue": "BL",
        "start": 55,
        "type": "RegisterAddress",
        "value": 1,
      },
      Object {
        "end": 63,
        "loc": Object {
          "end": Object {
            "column": 12,
            "line": 6,
          },
          "start": Object {
            "column": 10,
            "line": 6,
          },
        },
        "raw": "cl",
        "rawValue": "CL",
        "start": 61,
        "type": "Register",
        "value": 2,
      },
    ],
    "start": 51,
  },
  Object {
    "end": 67,
    "instruction": Object {
      "end": 67,
      "loc": Object {
        "end": Object {
          "column": 3,
          "line": 7,
        },
        "start": Object {
          "column": 0,
          "line": 7,
        },
      },
      "mnemonic": "END",
      "opcode": 0,
      "start": 64,
    },
    "label": null,
    "loc": Object {
      "end": Object {
        "column": 3,
        "line": 7,
      },
      "start": Object {
        "column": 0,
        "line": 7,
      },
    },
    "machineCodes": Array [0],
    "operands": Array [],
    "start": 64,
  },
]
`;
